# magiclens

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  makefile  pyproject.toml
.github/workflows/: build.yml
k8s/: deployment.yaml.template
k8s/base/: deployment.yaml  service.yaml
k8s/overlays/dev/: kustomization.yaml  magiclens-ingress.yaml
magiclens/: app.py  config.py
magiclens/routes/: api.py  ui_demo.py  view.py
magiclens/routes/iu/demo/: ui_demo.py
magiclens/routes/ui/demo/: demo.py
magiclens/static/: style.css
magiclens/storage/: __init__.py  local_handler.py  s3_handler.py  storage_handler.py
magiclens/templates/: _navbar.html  base.html  demo.html  demo_show_image.html  show_image.html  upload_image.html
magiclens/transform/: transform_handler.py
tests/: conftest.py  test_status.py
